-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.0 Beta 1
-
Mac OS X 10.8.2, Xcode 4.5, qt5/qtbase master
-
-
65f6ad26ed167b9baf0e63ba0b36f56a3de9c635
This is tested on latest qtbase master.
Run standarddialogs example and select QFileDialog::getOpenFileName(). The column view needs to be selected and then selecting different files eventually makes the app crash. File dialog seems to crash when it is trying to show the file icon in the quick view column.
- replaces
-
QTBUG-27398 Mac: File browser crashes when selecting file
-
- Closed
-
For Gerrit Dashboard: QTBUG-27327 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
36221,2 | Mac: Safely dispose of scrollbars temporary NSGraphicsContext | master | qt/qtbase | Status: MERGED | +2 | 0 |